FST3 - Notifications in right bottom corner of screen added